# DSAIT4205-control-dataset

./: README - Repair.md  README.md  main.ipynb  pyproject.toml
data/: data_sample.csv
